# pydra-ml

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  diabetes_spec.json  long-spec.json.sample  setup.cfg  setup.py  short-spec.json.sample
.github/workflows/: ci.yml  publish.yml  pythonpackage.yml  pythonpublish.yml  release.yml
examples/: classification_cancer_long-spec.json  classification_cancer_short-spec.json  classification_cancer_toy-spec.json  clear_locks.py  regression_diabetes_spec.json  run_clear_locks.sh
examples/out-classification_cancer_short-spec.json-20210728T161006.829323/: results-20210728T161006.829323.pkl  stats-roc_auc_score-20210728T161007.617984.pkl
examples/out-classification_cancer_short-spec.json-20210728T161006.829323/performance_table-20210728T161006.921055/: test-performance-table_accuracy_score_all-splits_20210728T161006.921055.csv  test-performance-table_accuracy_score_with-95ci_20210728T161006.921055.csv  test-performance-table_roc_auc_score_all-splits_20210728T161006.921055.csv  test-performance-table_roc_auc_score_with-95ci_20210728T161006.921055.csv
examples/out-classification_cancer_short-spec.json-20210728T161006.829323/shap-20210728T161007.876501/: indexes_quadrant.pkl  summary_values_shap_DecisionTreeClassifier_all_predictions.csv  summary_values_shap_DecisionTreeClassifier_fn.csv  summary_values_shap_DecisionTreeClassifier_fp.csv  summary_values_shap_DecisionTreeClassifier_tn.csv  summary_values_shap_DecisionTreeClassifier_tp.csv  summary_values_shap_MLPClassifier_all_predictions.csv  (+4 more)
examples/out-classification_cancer_toy-spec.json-20210728T163339.044114/: results-20210728T163339.044114.pkl  stats-precision_score-20210728T163339.519271.pkl  stats-recall_score-20210728T163340.032528.pkl
examples/out-regression_diabetes_spec.json-20210728T170728.943878/: results-20210728T170728.943878.pkl  stats-explained_variance_score-20210728T170729.522406.pkl
pydra_ml/: __init__.py  _version.py  classifier.py  cli.py  report.py  tasks.py
pydra_ml/tests/: test_classifier.py
tutorial/: 0_pydra_vs_sklearn.ipynb
(+39 files in other folders)
