[metadata]
url = https://github.com/nipype/pydra-ml
author = nipype developers
author_email = neuroimaging@python.org
maintainer = nipype developers
maintainer_email = neuroimaging@python.org
description = Pydra dataflow engine
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, 2.0
provides =
    pydra_ml
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
install_requires =
    pydra == 0.22.0
    psutil
    scikit-learn
    seaborn
    click
    shap

test_requires =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
packages = find:
include_package_data = True

[options.package_data]
pydra_ml = tests/data/*.csv

[options.extras_require]
doc =
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
tests =
    %(test)s
dev =
    %(test)s
    black
    pre-commit
all =
    %(doc)s
    %(dev)s

[options.entry_points]
console_scripts =
    pydraml=pydra_ml.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra_ml/_version.py
versionfile_build = pydra_ml/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
doctests = True
exclude =
    **/__init__.py
    **/tests/*
    *build/
    docs/sphinxext/
    docs/tools/
    pydra_ml/_version.py
max-line-length=99
